added style and sparkles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Langton's ant</title>
 </head>
 <body>
+    <div id="counter">
+        Step: 0
+    </div>
     <div id="grid" class="grid">
 
     </div>
